--- a/index.css
+++ b/index.css
@@ -3,18 +3,32 @@
     border: thin solid;
 }
 
-#iterText {
-    margin-left: 10px;
-    width: 50px;
-    text-align: right;
-}
-
-#iter {
-    margin-left: 10px;
-    color: blue;
-    font-size: small;
+input {
+    height: 18px;
 }
 
 .panel {
     border: thin gray solid;
+    display: inline;
+    position: relative;
+    margin-right: 5px;
+    top: 4px;
+    padding-top: 5px;
 }
+
+#iterText {
+    height: 16px;
+    width: 40px;
+    text-align: right;
+    padding-right: 3px;
+}
+
+#iter {
+    margin-left: 20px;
+    color: gray;
+    font-size: small;
+
+
+
+}
+
